[package]
name = "local-pool-with-id"
description = "A minor variation on a LocalPool executor which exposes unique IDs for tracking future completion."
version = "0.1.1"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"
homepage = "https://github.com/TannerRogalsky/local-pool-with-id.git"
repository = "https://github.com/TannerRogalsky/local-pool-with-id"
license = "MIT"
readme = "README.md"
keywords = ["executor", "local", "local pool", "localpool"]
categories = ["asynchronous"]

[dependencies]
futures = "0.3"
pin-utils = "0.1.0-alpha.4"